--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2126,6 +2126,32 @@ input, select, textarea {
 		background-repeat: repeat, no-repeat, no-repeat;
 		height: 100vh;
 	}
+	
+	#header-wrapper-about {
+		position: relative;
+		padding: 4em 0 2em 0;
+		background-image: url("images/header.svg");
+		background-image: url("images/overlay.png"), url("images/header.svg"), -moz-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), -webkit-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), -ms-linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
+		background-image: url("images/overlay.png"), url("images/header.svg"), linear-gradient(75deg, #FF7088 15%, #F2B69D 55%);
+		background-color: #f08c89;
+		background-size: 100% 620%;
+		background-size: 128px 128px, 100% 620%, auto;
+		background-repeat: repeat, no-repeat, no-repeat;
+	}
+
+	#poke {
+		height: 300px;
+		width: auto;
+		border-radius: 30px;
+		
+	}
+	#pokeAbout {
+		display: flex;
+		flex-direction: row;
+		gap: 10%;
+	}
 
 	.homepage #header-wrapper {
 		padding: 10em 0 6em 0;
@@ -2140,6 +2166,12 @@ input, select, textarea {
 		color: #fff;
 		text-align: center;
 		padding: 6em 0 6em 0;
+	}
+
+	#whet {
+		margin-top: 100px;
+		margin-bottom: 100px;
+		color: orangered;
 	}
 
 	#footer-wrapper {
