format changes via Cheron

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1762,6 +1762,7 @@ input, select, textarea {
 		border-radius: 15px;
 		box-shadow: 2px 2px 3px 2px #ffae00b1;
 		border: rgba(0, 0, 0, 0.415) solid 1px;
+		height: 2rem;
 	}
 
 		.image img {
