--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2382,7 +2382,7 @@ input, select, textarea {
 		#hero h2 {
 			color: rgb(255, 255, 255);
 			font-size: 3em;
-			background-color: rgb(0 0 0 / 41%);;
+			background-color: rgb(159 159 159 / 25%);
 			padding: 20px;
 			border-radius: 15px;
 		}
