--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2379,6 +2379,12 @@ input, select, textarea {
 		align-items: center;
 	}
 
+#contact-form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 		#hero h2 {
 			color: rgb(255, 255, 255);
 			font-size: 3em;
